force-app/main/default/objects/game__c/game__c.object-meta.xml
<CustomObject>
    <label>game</label>
    <nameField>
        <label>game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>