force-app/main/default/objects/game__c/fields/basketball__c.field-meta.xml
<CustomField>
    <fullName>basketball__c</fullName>
    <label>basketball</label>
    <length>20</length>
    <type>Text</type>
</CustomField>