force-app/main/default/objects/game__c/fields/indoor_games__c.field-meta.xml
<CustomField>
    <fullName>indoor_games__c</fullName>
    <label>indoor games</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>chess</fullName>
            </value>
            <value>
                <fullName>badminton</fullName>
            </value>
            <value>
                <fullName>table tennis</fullName>
            </value>
            <value>
                <fullName>carrom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>