force-app/main/default/objects/game__c/fields/players__c.field-meta.xml
<CustomField>
    <fullName>players__c</fullName>
    <label>players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>