force-app/main/default/objects/game__c/validationRules/game_point.validationRule-meta.xml
<ValidationRule>
    <fullName>game_point</fullName>
    <active>true</active>
    <errorConditionFormula>players__c  &gt; 1</errorConditionFormula>
    <errorMessage>numbers of players should be greater than 1</errorMessage>
</ValidationRule>