force-app/main/default/objects/game__c/listViews/my_list_view.listView-meta.xml
<ListView>
    <fullName>my_list_view</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>my list view</label>
</ListView>